--- a/Templates/Designs/TTonline/Paragraph/New_ArticleSlider.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ArticleSlider.cshtml
@@ -131,8 +131,10 @@
           </div>
         </div> 
       </div>
+      {{#ifCond isLast '===' false}}
+      <div class='slider-item'><div class='row'>
+      {{/ifCond}}  
       
-      <div class='slider-item'><div class='row'> 
               
     {{/ifCond}}
 
