--- a/Templates/Designs/TTonline/eCom/ProductList/ProductsFeed.cshtml
+++ b/Templates/Designs/TTonline/eCom/ProductList/ProductsFeed.cshtml
@@ -2,14 +2,16 @@
 @using System.Web;
 @using Dynamicweb.Configuration;
 @using Dynamicweb.Core;
-
 @functions {
     public class Sticker
     {
         public string className { get; set; }
         public string text { get; set; }
     }
-
+    public class Dealer
+    {
+        public string DealerName { get; set; }
+    }
     public class Product
     {
         public string id { get; set; }
@@ -18,18 +20,17 @@
         public string price { get; set; }
         public string discount { get; set; }
         public string onSale { get; set; }
-        public string shortGridInfo { get; set; }
         public string link { get; set; }
         public string image { get; set; }
         public string noImage { get; set; }
         public List<Sticker> Stickers { get; set; }
+        public string manufacturer { get; set; }
+        public List<Dealer> Dealers { get; set; }
+        public string idFormDetalii { get; set; }
     }
 }
-
 @{
     List<Product> feedObject = new List<Product>();
-    Boolean onlyPreview = Converter.ToBoolean(Pageview.Area.Item["OnlyPreviewForAnonymous"]) && Pageview.User == null;
-
     foreach (LoopItem product in GetLoop("Products"))
     {
         Product productObject = new Product();
@@ -42,112 +43,15 @@
         productObject.link = "/" + product.GetString("Ecom:Product.LinkGroup.Clean") + (!String.IsNullOrEmpty(product.GetString("Ecom:Product.VariantID")) ? "&VariantID=" + product.GetString("Ecom:Product.VariantID") : "");
         productObject.image = product.GetString("Ecom:Product.ImageLarge.Default.Clean");
         productObject.noImage = string.IsNullOrEmpty(product.GetString("Ecom:Product.ImageLarge.Default.Clean")) ? "u-hidden" : "";
-        productObject.shortGridInfo = onlyPreview ? "product-list__grid-item__short-info" : "";
-
+        productObject.manufacturer = product.GetString("Ecom:Manufacturer.Name");
         productObject.Stickers = new List<Sticker>();
-
-        if (Converter.ToBoolean(Pageview.Area.Item["EnableSaleTags"]))
-        {
-            string contentType = Pageview.Area.Item["EcommerceSaleTagContentType"].ToString();
-            var currency = Dynamicweb.Ecommerce.Services.Currencies.GetDefaultCurrency();
-            Sticker saleSticker = new Sticker();
-
-            switch (contentType)
-            {
-                case "Name":
-                    foreach (LoopItem discount in product.GetLoop("ProductDiscounts"))
-                    {
-                        saleSticker = new Sticker();
-                        saleSticker.text = discount.GetString("Ecom:Product.Discount.Name");
-                        saleSticker.className = "stickers-container__tag--sale";
-                        productObject.Stickers.Add(saleSticker);
-                    }
-                    break;
-                case "Amount":
-                    if (product.GetLoop("ProductDiscounts").Count > 0)
-                    {
-                        saleSticker = new Sticker();
-                        saleSticker.text = Dynamicweb.Ecommerce.Services.Currencies.Format(currency, product.GetDouble("Ecom:Product.Discount.Price.Price") - product.GetDouble("Ecom:Product.Price.Price"));
-                        saleSticker.className = "stickers-container__tag--sale";
-                        productObject.Stickers.Add(saleSticker);
-                    }
-                    break;
-                case "Percents":
-                    double percents = 0;
-                    foreach (LoopItem discount in product.GetLoop("ProductDiscounts"))
-                    {
-                        percents += discount.GetDouble("Ecom:Product.Discount.PercentWithoutVAT");
-                    }
-                    if (percents > 0) {
-                        saleSticker = new Sticker();
-                        saleSticker.text = Math.Round(percents, 0) + "%";
-                        saleSticker.className = "stickers-container__tag--sale";
-                        productObject.Stickers.Add(saleSticker);
-                    }
-                    break;
-                case "Amount+and+percents":
-                    double amount = 0;
-                    double percent = 0;
-                    foreach (LoopItem discount in product.GetLoop("ProductDiscounts"))
-                    {
-                        if (discount.GetString("Ecom:Product.Discount.Type") == "PERCENT")
-                        {
-                            percent += discount.GetDouble("Ecom:Product.Discount.PercentWithoutVAT");
-                        }
-                        else if (discount.GetString("Ecom:Product.Discount.Type") == "AMOUNT")
-                        {
-                            amount += discount.GetDouble("Ecom:Product.Discount.AmountWithVAT");
-                        }
-                    }
-
-                    if (percent > 0)
-                    {
-                        saleSticker = new Sticker();
-                        saleSticker.text = percent + "%";
-                        saleSticker.className = "stickers-container__tag--sale";
-                        productObject.Stickers.Add(saleSticker);
-                    }
-
-                    if (amount > 0)
-                    {
-                        saleSticker = new Sticker();
-                        saleSticker.text = "-" + Dynamicweb.Ecommerce.Services.Currencies.Format(currency, amount);
-                        saleSticker.className = "stickers-container__tag--sale";
-                        productObject.Stickers.Add(saleSticker);
-                    }
-                    break;
-                default:
-                    if (product.GetLoop("ProductDiscounts").Count > 0)
-                    {
-                        saleSticker = new Sticker();
-                        saleSticker.text = Translate("Sale!");
-                        saleSticker.className = "stickers-container__tag--sale";
-                        productObject.Stickers.Add(saleSticker);
-                    }
-                    break;
-            }
-        }
-
-        if (Converter.ToBoolean(Pageview.Area.Item["NewStickersEnable"]) && product.GetDate("Ecom:Product.Created").AddDays(Converter.ToDouble(Pageview.Area.Item["NewStickersExpiration"])) > DateTime.Now)
-        {
-            Sticker newSticker = new Sticker();
-            newSticker.className = "stickers-container__tag--new";
-            newSticker.text = Translate("New!");
-            productObject.Stickers.Add(newSticker);
-        }
-
-        if (!String.IsNullOrEmpty(product.GetString("Ecom:Product:Field.CustomSticker.Value")))
-        {
-            Sticker customSticker = new Sticker();
-            customSticker.className = "stickers-container__tag--custom";
-            customSticker.text = product.GetString("Ecom:Product:Field.CustomSticker.Value");
-            productObject.Stickers.Add(customSticker);
-        }
-
+        productObject.Dealers = new List<Dealer>();
+        Dealer itemDealer = new Dealer();
+        itemDealer.DealerName = product.GetString("Ecom:Product:Field.Dealeri");
+        productObject.Dealers.Add(itemDealer);
+        productObject.idFormDetalii = "120";
         feedObject.Add(productObject);
     }
-
     string jsonFeed = Newtonsoft.Json.JsonConvert.SerializeObject(feedObject);
 }
-
 @jsonFeed
