--- a/Templates/Designs/TTonline/Paragraph/New_ArticleSlider.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ArticleSlider.cshtml
@@ -28,7 +28,7 @@
   <div class="col-md-12">
     <div class="flexslider">
       <div class="featured-slider" id="HomePageSlider" data-template="HomepageSliderTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesSlides">
-        
+ 			<div class="loader"></div>        
             @*HANDLEBARS TEMPLATE GOES HERE*@
       </div>
     </div>
@@ -50,18 +50,18 @@
           
           <div class="featured-href">
             <figure class="image-overlay2">
-              <img src='{{itemImaginePrincipala}}' alt="{{mainTitle}}"/>
+              <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}' alt="{{itemTitlu}}"/>
             </figure>
            
           <div class="featured-header">
             <a  href="{{mainURL}}">
-             <h2 style="color:white;">{{mainTitle}}</h2>
+             <h2 style="color:white;">{{itemTitlu}}</h2>
               <p class="simple-share">
                 @Translate("articolde","de")
                {{#articleAutori}}
                                 {{Name}}
                 {{/articleAutori}} 
-                <span class="article-date">{{mainDate}}</span>
+                <span class="article-date">{{itemData}}</span>
               </p>
                </a>
             </div>
@@ -78,7 +78,7 @@
         </div> 
           <div  class="featured-href">
             <figure class="image-overlay2">
-              <img src='{{itemImaginePrincipala}}' alt="{{mainTitle}}"/>
+              <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}' alt="{{itemTitlu}}"/>
             </figure>
           
             <div class="featured-header">
@@ -86,13 +86,13 @@
               {{#articleSections}}
                 <span class="category bgcolor5">{{Name}}</span>
               {{/articleSections}}
-              <h2 style="color:white;">{{mainTitle}}</h2>
+              <h2 style="color:white;">{{itemTitlu}}</h2>
               <p class="simple-share">
                  @Translate("articolde","de")
                  {{#articleAutori}}
                    {{Name}}
                  {{/articleAutori}}
-                <span class="article-date">{{mainDate}}</span>
+                <span class="article-date">{{itemData}}</span>
               </p>
             </a>
             </div>
@@ -108,21 +108,21 @@
           </div> 
              <div class="featured-href">
                <figure class="image-overlay2">
-                 <img src='{{itemImaginePrincipala}}' alt="{{mainTitle}}"/>
+              <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}' alt="{{itemTitlu}}"/>
                </figure>
            
                <div class="featured-header">
-                 <a href="{{mainURL}}" >
+                 <a href="/Default.aspx?ID={{pagePageID}}" >
                  {{#articleSections}}
                   <span class="category bgcolor4">{{Name}}</span>
                  {{/articleSections}}
-                 <h2 style="color:white;">{{mainTitle}}</h2>
+                 <h2 style="color:white;">{{itemTitlu}}</h2>
                  <p class="simple-share">
                     @Translate("articolde","de")
                     {{#articleAutori}}
                      {{Name}}
                    {{/articleAutori}}
-                   <span class="article-date">{{mainDate}}</span>
+                   <span class="article-date">{{itemData}}</span>
                  </p>
                </a>
                </div>
