--- a/Templates/Designs/TTonline/css/10_custom/New_Homepage.css
+++ b/Templates/Designs/TTonline/css/10_custom/New_Homepage.css
@@ -110,3 +110,9 @@
 #HomePageSlider {
     min-height: 2em; 
 }
+
+.handlebars-wrapper {
+    clear: both;
+    position: relative;
+    min-height: 2em;
+}
