--- a/Templates/Designs/TTonline/Paragraph/New_ArticleListRecomandari.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ArticleListRecomandari.cshtml
@@ -3,18 +3,16 @@
 @using Dynamicweb.Content
 @using System.Linq;
 @using System.Web;
-@Include("../Custom/GlobalVariables.cshtml")
-@Include("../Includes/ArticleHelper.cshtml")
 @Include("../Includes/GetImage_new.cshtml")
 
 @{
 	var pageId = GetPageIdByNavigationTag("ArticlesFeed");
-	var articlesSlides = "";
+	var articlesIDs = "";
 	foreach (LoopItem i in GetLoop("Item.Lista_Articole"))
 	{
 		var slideId = i.GetString("Item.Lista_Articole.Id");
 		var pageService = new Dynamicweb.Content.PageService();
-		articlesSlides += pageService.GetPageForItem("Dw_Page", slideId.ToString()).ID + ",";
+		articlesIDs += pageService.GetPageForItem("Dw_Page", slideId.ToString()).ID + ",";
 	}
 }
 
@@ -22,28 +20,27 @@
 	<h3 class="block-title">
 		<span>@Translate("recomandari","Recomandari") T&T</span>
 	</h3>
-    <div id="RecomandariTT" data-template="RecomandariTTTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesSlides">
+    <div id="RecomandariTT" class="handlebars-wrapper" data-template="RecomandariTTTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesIDs">
         <div class="loader"></div>
         @*HANDLEBARS TEMPLATE GOES HERE*@
     </div>
 </div>
 
 <script id="RecomandariTTTemplate"  type="text/x-handlebars-template">
-
+       
     {{#ArticlesContainer}}
        {{#each Article}}
        {{#ifCond itemSort '===' 1}} 
             <article class="news-block">
                 <a href="/Default.aspx?ID={{pagePageID}}" class="overlay-link">
                     <figure class="image-overlay proportie-1">
-                        <img src="{{itemImaginePrincipala}}" class="img-responsive">
+                        <img src="{{itemImaginePrincipala}}?format=jpg&width=540&height=355&bgcolor=white" class="img-responsive">
                     </figure>
                 </a>
-                <a href="/Default.aspx?ID={{itemSectiuneParinteId}}" class="bg{{itemSectiuneParinteId}}" category">{{itemSectiuneParinte}}</a>
-                          
+                <a href="/Default.aspx?ID={{pageParentPageId}}" class="bg{{itemSectiuneParinteId}} category">{{itemSectiuneParinte}}</a>
                 <header class="news-details">
                     <h3 class="news-title"><a href="/Default.aspx?ID={{pagePageID}}">{{pageMenuText}}</a></h3>                     
-                    <p>{{itemSumar}}</p>
+                    <p>{{{itemSumar}}}</p>
                     <p class="simple-share"> 
                     @Translate("articolde","de")  
                        {{#articleAutori}}                         
@@ -53,8 +50,7 @@
                        <span class="article-date"><i class="fa fa-clock-o"></i> {{itemData}}</span>                        
                         {{#if showItemVisits}}    
                             <span>  -  <i class="fa fa-eye"></i> {{itemVisits}} vizualizari</span>
-                         {{/if}}   
-                        }
+                         {{/if}}                           
                     </p> 
                 </header>  
             </article>
@@ -63,7 +59,7 @@
             <article class="simple-post clearfix">
                 <div class="simple-thumb">
                     <a href="/Default.aspx?ID={{pagePageID}}">
-                        <img src="{{itemImaginePrincipala}}" class="img-responsive">
+                        <img src="{{itemImaginePrincipala}}?format=jpg&Width=160&Height=120&bgcolor=white" class="img-responsive">
                     </a>
                 </div>
                 <header>
